Feature: Complete GDPR/HIPAA Phase 2 - Backup System, Audit Logging, and Retention Policy
This commit implements the remaining Phase 2 compliance features for GDPR and HIPAA regulations:

## 1. Encrypted Backup System (HIPAA §164.308(a)(7)(ii)(A))
- Created `server/backup/backupManager.ts` with full backup lifecycle management
- Implements AES-256-GCM encryption via KeyManager for all backups
- Gzip compression (level 9) to reduce storage requirements
- Backup features:
  * Create encrypted/compressed backups of SQLite database
  * List all available backups with metadata
  * Restore from any backup (with pre-restore safety backup)
  * Delete individual backups
  * Automatic retention cleanup (keep last N backups)
- Added 4 backup API endpoints to server.ts:
  * POST /api/backup/create - Create new backup
  * GET /api/backup/list - List all backups
  * POST /api/backup/restore/:id - Restore from backup
  * DELETE /api/backup/:id - Delete specific backup
- Scheduled backups run automatically based on config settings
- Backup UI in AboutModal showing status, create button, and backup list with restore/delete actions

## 2. Enhanced Audit Logging (HIPAA §164.312(b))
- Created `server/audit/auditEvents.ts` with comprehensive event types and severity levels
- Created `server/audit/auditLogger.ts` with:
  * JSON-formatted append-only audit logs
  * Automatic log rotation (10MB threshold)
  * Configurable retention policy cleanup
  * File-based logging for tamper-resistance
- Audit events tracked:
  * Authentication (login success/failure, password change)
  * Data operations (export, delete all data, retention cleanup)
  * Backup operations (create, restore, delete)
  * System events (server start)
- Integrated audit logging into all critical operations in server.ts and database.ts

## 3. Retention Policy Implementation (GDPR Article 5.1.e)
- Added retention configuration to settings.json (default: 90 days)
- Implemented automatic session cleanup based on retention period

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,44 @@
+# Dependencies
 node_modules
+
+# Sensitive Configuration Files (NEVER commit these)
+config/.auth
+config/.auth.backup
+config/.encryption_salt
+
+# User Data (GDPR/HIPAA Protected)
+data/
+*.db
+*.db-shm
+*.db-wal
+
+# Vector Databases
+*.lance/
+
+# Backups
+backups/
+*.backup
+
+# Development
+.dev-pids
+.DS_Store
+
+# Build outputs
+dist/
+dist-server/
+*.log
+
+# Environment variables
+.env
+.env.local
+.env*.local
+
+# Editor directories
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+Thumbs.db
